syntax = "proto3";

package cn.edu.cug.cs.gtl.protos;

import public "google/protobuf/any.proto";
import public "google/protobuf/type.proto";
import public "cn/edu/cug/cs/gtl/protos/identifier.proto";


option csharp_namespace = "cn.edu.cug.cs.gtl.protos";

option cc_enable_arenas = true;

option java_package = "cn.edu.cug.cs.gtl.protos";
option java_multiple_files = true;
option java_outer_classname = "Values";
// same as sqlite3 storage type
//UDT is the extend types which is defined by users
message Type{
    enum EnumType {
        NULL = 0;
        TEXT = 1;
        INTEGER = 2;
        REAL = 3;
        BLOB = 4;
        TIME = 5;
        UDT=6;//user defined type
    }
    EnumType  id=1;
    string    alias=3;
}


message NullValue {
}

message RealValue {
    double value = 1;
}

message IntegerValue {
    int64 value = 1;
}

message BlobValue {
    bytes value = 1;
}

message TextValue {
    string value = 1;
}

message TimeValue{
    int32 year=1;
    int32 month=2;
    int32 day=3;
    int32 hour=4;
    int32 minute=5;
    int32 second=6;
    int32 milliscond=7;
    int64 nanosecond=8;
}

message UDTValue{
    string value=1;
}

message Value {
    Type type = 1;
    google.protobuf.Any data = 2;
}

message ColumnInfo {
    Type   type= 1;//FTYPE
    string name = 2;//English Name, FENAME
    string code = 3;//FCODE
    string title = 4;//Chinese Name,FCNAME
    int32  length=5;//FLENGTH
    int32  precision=6;//FPRECISION,表示字段类型的精度的总长度，如果为null,表示精度的总长度不固定，最长为Length；
    int32  scale=7; //表示字段类型的精度范围，如果为0,表示只能存储为整数，
    bool   nullable=8;//FISNULL
    string default_value=9;//FDEFAULT
    string max_value=10;//FMAX
    string min_value=11;//FMIN
    string check=12;//FCHECK
    string comment=13;//FMEMO
    string table_name=14;//FTABLENAME
    string tag=15;//FTAG
    string char_set=16;//FCHARSET
    string enumeration=17;//FENUM
    string procedure=18; //FPROCEDURE

}

message Column {
    ColumnInfo info = 1;
    repeated google.protobuf.Any value = 2;
}


message Tuple {
    repeated google.protobuf.Any element = 1;
}

message TableInfo {
    string name = 1;//TENAME
    string code = 2;//TCODE
    string title = 3;//TCNAME
    string type=4;//TTYPE
    string check=5;//TCHECK
    string comment=6;//TMEMO
    string schema=7;//TSCHEMA
    string tag=8;//TTAG
    string sql=9;//TSQL
    repeated ColumnInfo column_info = 10;
}

message Table {
    Identifier identifier = 1;
    TableInfo info = 2;
    repeated Column column = 3;
}

message DataSet {
    repeated ColumnInfo column_info = 2;
    repeated Tuple tuple = 3;
}

message Property{
    string name=1;
    string value=2;
}

message Properties{
    map<string,string> properties=1;
}

message Parameter{
    string name=1;
    string value=2;
}

message Parameters{
    repeated Parameter parameter=1;
}